<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".Login">
    
    <!--<LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center_horizontal">-->
    <com.github.florent37.arclayout.ArcLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:arc_cropDirection="cropOutside"
        app:arc_height="30dp">
        <!--<de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/touxiang"
            android:layout_gravity="center"/>-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/loginbackground"
            android:scaleType="centerCrop" />
    </com.github.florent37.arclayout.ArcLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username"
            android:inputType="text"
            android:imeOptions="actionGo"
            android:drawableLeft="@drawable/ic_child"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="text"
            android:imeOptions="actionGo"
            android:drawableLeft="@drawable/ic_lock"/>

    </android.support.design.widget.TextInputLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/loginbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>